[gd_scene load_steps=2 format=3 uid="uid://0hfwe7d3htt"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_graphics/options_graphics.gd" id="1_fliy3"]

[node name="OptionsGraphics" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fliy3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Graphic Options"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CHECK_Fullscreen" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen:"

[node name="CHECK_GI" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Global Illumination: "

[node name="CHECK_VolumetricFog" type="CheckButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Volumetric Fog:"

[connection signal="toggled" from="VBoxContainer/CHECK_Fullscreen" to="." method="_on_check_fullscreen_toggled"]
[connection signal="toggled" from="VBoxContainer/CHECK_GI" to="." method="_on_check_gi_toggled"]
[connection signal="toggled" from="VBoxContainer/CHECK_VolumetricFog" to="." method="_on_check_volumetric_fog_toggled"]
